[gd_scene load_steps=6 format=3 uid="uid://55u7aqupmtth"]

[ext_resource type="Script" path="res://Code/epilogue.gd" id="1_gkdvo"]
[ext_resource type="Texture2D" uid="uid://dy8c0y3c375g5" path="res://Assets/bar.png" id="4_yxqal"]
[ext_resource type="AudioStream" uid="uid://cf1woj4vfttan" path="res://Assets/Sound/frogtown.ogg" id="5_xe207"]

[sub_resource type="LabelSettings" id="LabelSettings_yoyvc"]
font_size = 48
outline_size = 16
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_nvo1w"]
font_size = 18
outline_size = 16
outline_color = Color(0, 0, 0, 1)

[node name="Epilogue" type="Node2D"]
script = ExtResource("1_gkdvo")

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_xe207")
autoplay = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -208.0
offset_right = 275.0
offset_bottom = -141.0
grow_horizontal = 2
grow_vertical = 2
text = "YOU WON!!!!!!"
label_settings = SubResource("LabelSettings_yoyvc")

[node name="Label1" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 272.0
offset_top = 96.0
offset_right = 399.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
text = "Final time: "
label_settings = SubResource("LabelSettings_nvo1w")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 344.0
offset_top = 136.0
offset_right = 471.0
offset_bottom = 170.0
grow_horizontal = 2
grow_vertical = 2
text = "Your deaths:"
label_settings = SubResource("LabelSettings_nvo1w")
horizontal_alignment = 1
vertical_alignment = 1

[node name="STimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -2
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("4_yxqal")
metadata/_edit_lock_ = true

[connection signal="timeout" from="STimer" to="." method="_on_s_timer_timeout"]
